--- a/templates/static_templates/theme-about.html
+++ b/templates/static_templates/theme-about.html
@@ -34,8 +34,8 @@
       </div>
       <article>
         <h2>FAQs</h2>
-        <p><strong>Has IONIS Education Group joined the edX consortium?</strong><br />
-        No.  We're partnering on the open source software.</p>
+        <p><strong>*En Construction*</strong><br />
+        </p>
         
       </article>
       <hr class="fade-right-hr-divider">
