--- a/templates/theme-header.html
+++ b/templates/theme-header.html
@@ -24,17 +24,17 @@
 ## When unauthenticated, only show the about page link
 <%block name="navigation_global_links">
   <li class="nav-global-01">
-    <a href="${marketing_link('ABOUT')}">About</a>
+    <a href="${marketing_link('ABOUT')}">A Propos</a>
   </li>
 </%block>
 
 ## When authenticated, show both the about page and find courses
 <%block name="navigation_global_links_authenticated">
   <li class="nav-global-01">
-    <a href="${marketing_link('ABOUT')}">About</a>
+    <a href="${marketing_link('ABOUT')}">A Propos</a>
   </li>
   <li class="nav-global-02">
-    <a href="${marketing_link('COURSES')}">Find Courses</a>
+    <a href="${marketing_link('COURSES')}">Chercher des cours</a>
   </li>
 </%block>
 
