--- a/templates/static_templates/theme-about.html
+++ b/templates/static_templates/theme-about.html
@@ -3,11 +3,11 @@
 
 <%inherit file="/main.html" />
 
-<%block name="title"><title>A propos de IONIS Online Courses</title></%block>
+<%block name="title"><title>À propos de IONIS Online Courses</title></%block>
 
 <section class="container about">
   <nav>
-    <a href="#about" class="active">A Propos</a>
+    <a href="#about" class="active">À Propos</a>
     <a href="#faq">Questions fréquentes</a>
     <a href="#contact">Contact</a>
   </nav>
@@ -18,7 +18,7 @@
         <img src="${static.url('themes/ioc-edx-theme/images/ionis-campus-paris-sud.jpg')}" alt="Campus IONIS Paris Sud" />
       </div>
       <article>
-        <h2>About <span class="edx">IONIS Online Courses</span></h2>
+        <h2>À propos de <span class="edx">IONIS Online Courses</span></h2>
         
         <p>IONIS Education Group développe de nouveaux supports de cours en ligne afin d'améliorer les enseignements de ses campus et permettre au grand public d'accéder à un enseignement d'exception.</p>
         <p>L'équipe Opérations de la Direction de l'Enseignement Numérique exécute et développe une instance de la plateforme <a href="http://code.edx.org">OpenEdX</a>.</p>
@@ -47,24 +47,12 @@
         <img src="${static.url('themes/ioc-edx-theme/images/dish.jpg')}" alt="Stanford Dish by Twilight" />
           <!-- Image Copyright owned by Stanford University -->
       </div>
-      <article id="stanford-OpenEdX-contact">
+      <article id="ionis-online-courses-contact">
         <h2>Nous contacter</h2>
         <p><strong>Vous pouvez nous contacter par email à l'adresse :</strong><br />
         <a href="mailto:digital.learning@ionis-group.com">digital.learning@ionis-group.com</a></p>
 
       </article>
-      <script>
-        $(function() {
-          var ua = navigator.userAgent;
-          
-          $('#stanford-OpenEdX-contact a').each(function() {
-            var href = $(this).attr('href') + "?body=User Agent String: " + ua + " (Please do not delete, this text helps us help you. - Stanford OpenEdX Team)";
-            if (!$(this).hasClass('external')) {
-              $(this).attr('href', href);
-            }
-          });
-        });
-      </script>
       <hr class="fade-right-hr-divider">
     </section>
   </section>
