--- a/templates/theme-head-extra.html
+++ b/templates/theme-head-extra.html
@@ -2,7 +2,7 @@
 
 <%namespace name='static' file='/static_content.html'/>
 <link rel="stylesheet" href="${static.url('themes/ioc-edx-theme/css/vendor/su-identity.css')}" />
-<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+<link href='//fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 <!--[if lt IE 9]>
   <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
   <script type="text/javascript">
