Comment non existing files

--- a/templates/theme-footer.html
+++ b/templates/theme-footer.html
@@ -76,8 +76,8 @@
     else { window.xtparam = "&ac=" + xt_ac + "&an=" + xt_an + xt_multc; };
     //-->
 </script>
-<script type="text/javascript" src="../static/js/xtclicks.js"></script>
-<script type="text/javascript" src="../static/js/xtcore.js"></script>
+<!-- <script type="text/javascript" src="../static/js/xtclicks.js"></script> -->
+<!-- <script type="text/javascript" src="../static/js/xtcore.js"></script> -->
 <noscript>
 <img width="1" height="1" alt="" src="http://logc279.xiti.com/hit.xiti?s=537008&s2=&p=&di=&an=&ac=" >
 </noscript>
