new images for IONIS Brand Culture, Contact Email

--- a/templates/static_templates/theme-about.html
+++ b/templates/static_templates/theme-about.html
@@ -8,7 +8,7 @@
 <section class="container about">
   <nav>
     <a href="#about" class="active">À Propos</a>
-    <a href="#faq">Questions fréquentes</a>
+    <a href="#ibc">IONIS Brand Culture</a>
     <a href="#contact">Contact</a>
   </nav>
 
@@ -18,34 +18,29 @@
         <img src="${static.url('themes/ioc-edx-theme/images/ionis-campus-paris-sud.jpg')}" alt="Campus IONIS Paris Sud" />
       </div>
       <article>
-        <h2>À propos de <span class="edx">IONIS Online Courses</span></h2>
+        <h2>À propos de IONIS Online Courses</span></h2>
         
-        <p>IONIS Education Group développe de nouveaux supports de cours en ligne afin d'améliorer les enseignements de ses campus et permettre au grand public d'accéder à un enseignement d'exception.</p>
-        <p>L'équipe Opérations de la Direction de l'Enseignement Numérique exécute et développe une instance de la plateforme <a href="http://code.edx.org">OpenEdX</a>.</p>
+        <p>IONIS Education Group développe de nouveaux supports de cours en ligne complétant ses enseignements en campus et permettant au grand public d'accéder à ses contenus originaux.</p>
+        <p>Nous exécutons et développons une instance de la plateforme <a href="http://code.edx.org">OpenEdX</a>.</p>
       </article>
       <hr class="fade-right-hr-divider">
     </section>
 
-    <section class="message left" id="faq">
+    <section class="message left" id="ibc">
       <div class="photo">
-<!--
-        <img src="${static.url('themes/ioc-edx-theme/images/memchu.jpg')}" alt="Stanford Memorial Church Facade" />
-          <!-- Image Copyright owned by Giulio Gratta -->
+        <img src="${static.url('themes/ioc-edx-theme/images/ionis-brand-culture.png')}" alt="IONIS Brand Culture" />
       </div>
       <article>
-        <h2>FAQs</h2>
-        <p><strong>*En Construction*</strong><br />
+        <h2>IONIS Brand Culture</h2>
+        <p>En attendant de profiter des enseignements à venir sur IONIS Online Courses, vous pouvez d'ores et déjà consulter <a href="http://www.ionisbrandculture.com/">IONIS Brand Culture</a>, une initiative originale dont l'objectif est d’apporter une bonne connaissance et compréhension des grandes réussites de référence dans les domaines du marketing et de la communication</strong><br />
         </p>
-        
       </article>
       <hr class="fade-right-hr-divider">
     </section>
 
     <section class="message left" id="contact">
       <div class="photo">
-<!--
-        <img src="${static.url('themes/ioc-edx-theme/images/dish.jpg')}" alt="Stanford Dish by Twilight" />
-          <!-- Image Copyright owned by Stanford University -->
+        <img src="${static.url('themes/ioc-edx-theme/images/contact-email.png')}" alt="Email Contact" />
       </div>
       <article id="ionis-online-courses-contact">
         <h2>Nous contacter</h2>
