Remove footer content

--- a/templates/theme-footer.html
+++ b/templates/theme-footer.html
@@ -1,34 +1,5 @@
-## mako
-<%! from django.core.urlresolvers import reverse %>
-<div class="wrapper-footer">
-  <footer>
-    <section class="apropos">
-      <h3>À propos</h3>
-      <p>
-        Créé il y a plus de 30 ans par Marc Sellam, le Groupe IONIS est
-        aujourd'hui le premier groupe de l'enseignement supérieur privé
-        en France. Les 19 écoles et entités du Groupe rassemblent près
-        de 19 000 étudiants et 62 000 anciens en commerce, informatique,
-        aéronautique, énergie, transport, biologie, gestion, finance,
-        marketing, communication et création. Le Groupe IONIS s'est
-        donné pour vocation de former la nouvelle intelligence des
-        entreprises. Une forte ouverture à l'international, une grande
-        sensibilité à l'innovation, à l'esprit d'entreprendre, une
-        véritable « culture de l'adaptabilité et du changement » sont
-        les principales valeurs enseignées aux futurs diplômés des
-        écoles de IONIS Education Group, qui deviendront des acteurs
-        clés de l'économie de demain.
-      </p>
-    </section>
-    <section class="ionis20">
-      <h3>IONIS 2.0</h3>
-      <ul>
-        <li><a href="http://www.facebook.com/groupe.ionis" target="_blank" class="facebook">Facebook IONIS Education Group</a></li>
-        <li><a href="http://twitter.com/Groupe_IONIS" target="_blank" class="twitter">Twitter IONIS Education Group</a></li>
-        <li><a href="https://plus.google.com/114600760005242156170/posts" target="_blank" class="googleplus">Google Plus IONIS Education Group</a></li>
-        <li><a href="http://feeds.feedburner.com/ActualitesIONISEducationGroup" target="_blank" class="rss">Flux RSS IONIS Education Group</a></li>
-      </ul>
-    </section>
-    <div class="clearboth"></div>
-  </footer>
-</div>
+<footer>
+  <div class="container">
+    © IONIS Online Courses
+  </div>
+</footer>
