Remove edx logo

--- a/templates/theme-header.html
+++ b/templates/theme-header.html
@@ -4,6 +4,9 @@
 <%block name="navigation_top">
 </%block>
 
+<%block name="navigation_logo">
+</%block>
+
 ## When unauthenticated, only show the about page link
 <%block name="navigation_global_links">
   <li class="nav-global-01">
