--- a/templates/theme-header.html
+++ b/templates/theme-header.html
@@ -5,7 +5,7 @@
 </%block>
 
 <%block name="navigation_logo">
-  <img src="/static/themes/ioc-edx-theme/images/logo-ionis-online-courses.jpg" alt="IONIS Online Courses" width="145" height="70" />
+  <img src="/static/themes/ioc-edx-theme/images/logo.png" alt="IONIS Online Courses" width="145" height="70" />
 </%block>
 
 ## When unauthenticated, only show the about page link
