--- a/templates/theme-header.html
+++ b/templates/theme-header.html
@@ -21,6 +21,6 @@
     <a href="${marketing_link('ABOUT')}">À Propos</a>
   </li>
   <li class="nav-global-02">
-    <a href="${marketing_link('COURSES')}">Chercher des cours</a>
+    <a href="${marketing_link('COURSES')}">Nos cours</a>
   </li>
 </%block>
