--- a/static/css/main.css
+++ b/static/css/main.css
@@ -270,7 +270,7 @@ section.dashboard section.my-courses .empty-dashboard-message > a {
 
     margin: 0;
     padding: 8px 12px;
-    background-color: #white;
+    background-color: white;
     border-color: #ddd;
 }
 
