--- a/templates/theme-google-analytics.html
+++ b/templates/theme-google-analytics.html
@@ -1,3 +1,4 @@
+## mako
 <script>
     (function (i, s, o, g, r, a, m) {
         i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
@@ -8,5 +9,4 @@
 
     ga('create', 'UA-1211982-22', 'ionis-group.com');
     ga('send', 'pageview');
-
 </script>
