Fix annoying behavior with !important :)

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -45,6 +45,12 @@ h2 {
   color: #2daae1 !important;
 }
 
+p a:link,
+p a:visited {
+    font-family: $sans-serif !important;
+}
+
+
 /* ==========================================================================
    Footer
    ========================================================================== */
