--- a/templates/registration/password_reset_confirm.html
+++ b/templates/registration/password_reset_confirm.html
@@ -1,19 +1,20 @@
-{% extends "main_django.html" %}
-{% load staticfiles %}
-{% block title %}<title>Reset Your {{ PLATFORM_NAME }} Password</title>{% endblock %}
-{% block main_vendor_js %}{% endblock %}
-{% block headextra %}
-  <!--[if lt IE 9]>
-  <script src="{% static 'js/html5shiv.js' %}"></script>
-  <![endif]-->
+## mako
 
+<%inherit file="/main.html" />
+<%namespace name='static' file='/static_content.html'/>
+<%! from django.utils.translation import ugettext as _ %>
+
+<%block name="title">
+<title>IONIS Online Courses | Réinitialiser votre mot de passe</title>
+</%block>
+
+<%block name="bodyclass">view-passwordreset</%block>
+
+<%block name="js_extra">
   <script type="text/javascript">
     $(function() {
-
-      var view_name = 'view-passwordreset';
-
       // adding js class for styling with accessibility in mind
-      $('body').addClass('js').addClass(view_name);
+      $('body').addClass('js');
 
       // new window/tab opening
       $('a[rel="external"], a[class="new-vp"]')
@@ -30,88 +31,78 @@
       });
     });
   </script>
-{% endblock %}
+</%block>
 
-{% block bodyclass %}view-passwordreset{% endblock %}
+<section class="introduction">
+  <header>
+    <h1 class="title">
+      <span class="title-super">Réinitialiser votre mot de passe</span>
+      <span class="title-sub"></span>
+    </h1>
+  </header>
+</section>
 
-{% block body %}
-  <section class="passwordreset container">
-    <section class="introduction">
-      <header>
-        <h1>Reset Your {{ PLATFORM_NAME }} Password</h1>
-      </header>
-    </section>
+<section class="passwordreset container">
+  <section role="main" class="content">
+    %if validlink:
+    <form role="form" id="passwordreset-form" method="post">
+      <input type="hidden" name="csrfmiddlewaretoken" value="${ csrf_token }">
 
-    <section role="main" class="content">
-      {% if validlink %}
-      <header>
-        <h2 class="sr">Password Reset Form</h2>
-      </header>
+      <p class="instructions">
+        ${_('Please enter your new password twice so we can verify you typed it in correctly. <br /> Required fields are noted by <strong class="indicator">bold text and an asterisk (*)</strong>.')}
+      </p>
 
-      <form role="form" id="passwordreset-form" method="post" data-remote="true" action="">{% csrf_token %}
-        <!-- status messages -->
-        <div role="alert" class="status message">
-          <h3 class="message-title">We're sorry, {{ PLATFORM_NAME }} enrollment is not available in your region</h3>
-          <p class="message-copy">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</p>
-        </div>
-
-        <div role="alert" class="status message submission-error">
-          <h3 class="message-title">The following errors occured while processing your registration: </h3>
-          <ul class="message-copy">
-            <li>You must complete all fields.</li>
-            <li>The two password fields didn't match.</li>
-          </ul>
-        </div>
-
-        <div role="alert" class="status message system-error">
-          <h3 class="message-title">We're sorry, our systems seem to be having trouble processing your password reset</h3>
-          <p class="message-copy">Someone has been made aware of this issue. Please try again shortly. Please <a href="{{MKTG_URL_CONTACT}}">contact us</a> about any concerns you have.</p>
-        </div>
-
-        <p class="instructions">
-          Please enter your new password twice so we can verify you typed it in correctly. <br />
-          Required fields are noted by <strong class="indicator">bold text and an asterisk (*)</strong>.
-        </p>
-
-        <fieldset class="group group-form group-form-requiredinformation">
-          <legend class="sr">Required Information</legend>
-
-          <ol class="list-input">
-            <li class="field required password" id="field-new_password1">
-              <label for="new_password1">Your New Password</label>
-              <input id="new_password1" type="password" name="new_password1" placeholder="*****" />
-            </li>
-            <li class="field required password" id="field-new_password2">
-              <label for="new_password2">Your New Password Again</label>
-              <input id="new_password2" type="password" name="new_password2" placeholder="*****" />
-            </li>
-          </ol>
-        </fieldset>
-
-        <div class="form-actions">
-          <button name="submit" type="submit" id="submit" class="action action-primary action-update">Change My Password</button>
-        </div>
-      </form>
-
-      {% else %}
-
-      <header>
-        <h2 class="sr">Your Password Reset Was Unsuccessful</h2>
-      </header>
-      <p>The password reset link was invalid, possibly because the link has already been used.  Please return to the <a href="/login">login page</a> and start the password reset process again.</p>
-
-      {% endif %}
-    </section>
-
-    <aside role="complementary">
-      <header>
-        <h3 class="sr">Password Reset Help</h3>
-      </header>
-
-      <div class="cta cta-help">
-        <h3>Need Help?</h3>
-        <p>View our <a href="{{MKTG_URL_FAQ}}">help section for contact information and answers to commonly asked questions</a></p>
+      %if form.errors:
+      <div role="alert" class="status message submission-error is-shown">
+        <h3 class="message-title">Impossible de réinitialiser votre mot de passe :</h3>
+        <ul class="message-copy">
+          <li>${_("You must complete all fields.")}</li>
+          <li>${_("The two password fields didn't match.")}</li>
+        </ul>
       </div>
-    </aside>
+      %endif
+
+      <fieldset class="group group-form group-form-requiredinformation">
+        <legend class="sr">${_("Required Information")}</legend>
+
+        <ol class="list-input field-error">
+          <li class="field required password ${'error' if 'new_password1' in form.errors else ''}" id="field-new_password1">
+            <label for="new_password1">${_("Your New Password")}</label>
+            <input id="new_password1" type="password" name="new_password1" placeholder="*****" />
+          </li>
+          <li class="field required password ${'error' if 'new_password2' in form.errors else ''}" id="field-new_password2">
+            <label for="new_password2">${_("Your New Password Again")}</label>
+            <input id="new_password2" type="password" name="new_password2" placeholder="*****" />
+          </li>
+        </ol>
+      </fieldset>
+
+      <div class="form-actions">
+        <button name="submit" type="submit" id="submit" class="action action-primary action-update">${_("Change My Password")}</button>
+      </div>
+    </form>
+    %else:
+      <header>
+        <h2 class="sr">${_("Your Password Reset Was Unsuccessful")}</h2>
+      </header>
+      <p>
+       Le lien de ré-initialisation du mot de passe est incorrect, sans doute parce qu'il a déjà été utilisé.
+       <br>
+       Retournez sur la <a href="/login">page de connexion</a> pour recommencer la procédure.
+      </p>
+    %endif
   </section>
-{% endblock %}
+
+  <aside role="complementary">
+    <header>
+      <h3 class="sr">Password Reset Help</h3>
+    </header>
+
+    <div class="cta cta-help">
+      <h3>Need Help?</h3>
+      <p>
+        ${_('View our {start_link}help section for contact information and answers to commonly asked questions{end_link}').format(start_link='<a href="{{MKTG_URL_FAQ}}">',end_link='</a>')}
+      </p>
+    </div>
+  </aside>
+</section>
