Few fixes to reset password page

--- a/templates/registration/password_reset_confirm.html
+++ b/templates/registration/password_reset_confirm.html
@@ -95,13 +95,13 @@
 
   <aside role="complementary">
     <header>
-      <h3 class="sr">Password Reset Help</h3>
+      <h3 class="sr">${_("Password Reset Help")}</h3>
     </header>
 
     <div class="cta cta-help">
-      <h3>Need Help?</h3>
+      <h3>${_("Need Help?")}</h3>
       <p>
-        ${_('View our {start_link}help section for contact information and answers to commonly asked questions{end_link}').format(start_link='<a href="{{MKTG_URL_FAQ}}">',end_link='</a>')}
+        Visualiser les  <a href="${marketing_link('FAQ')}">questions fréquemment posées</a>.
       </p>
     </div>
   </aside>
