Remove aside when lostpassword link is invalid

--- a/templates/registration/password_reset_confirm.html
+++ b/templates/registration/password_reset_confirm.html
@@ -82,17 +82,18 @@
       </div>
     </form>
     %else:
-      <header>
-        <h2 class="sr">${_("Your Password Reset Was Unsuccessful")}</h2>
-      </header>
-      <p>
-       Le lien de ré-initialisation du mot de passe est incorrect, sans doute parce qu'il a déjà été utilisé.
-       <br>
-       Retournez sur la <a href="/login">page de connexion</a> pour recommencer la procédure.
-      </p>
+    <header>
+      <h2 class="sr">${_("Your Password Reset Was Unsuccessful")}</h2>
+    </header>
+    <p>
+      Le lien de ré-initialisation du mot de passe est incorrect, sans doute parce qu'il a déjà été utilisé.
+      <br>
+      Retournez sur la <a href="/login">page de connexion</a> pour recommencer la procédure.
+    </p>
     %endif
   </section>
 
+  %if validlink:
   <aside role="complementary">
     <header>
       <h3 class="sr">${_("Password Reset Help")}</h3>
@@ -105,4 +106,5 @@
       </p>
     </div>
   </aside>
+  %endif
 </section>
