--- a/templates/theme-footer.html
+++ b/templates/theme-footer.html
@@ -1,6 +1,6 @@
 ## mako
-<footer>
-  <div>
+<div class="wrapper wrapper-footer">
+  <footer>
     <p>© IONIS Online Courses</p>
-  </div>
-</footer>
+  </footer>
+</div>
