--- a/templates/static_templates/theme-about.html
+++ b/templates/static_templates/theme-about.html
@@ -3,7 +3,7 @@
 
 <%inherit file="/main.html" />
 
-<%block name="title"><title>À propos de IONIS Online Courses</title></%block>
+<%block name="pagetitle">À propos</%block>
 
 <%block name="js_extra">
   <script type="text/javascript">
