--- a/templates/static_templates/theme-contact.html
+++ b/templates/static_templates/theme-contact.html
@@ -2,9 +2,7 @@
 
 <%namespace name='static' file='/static_content.html'/>
 
-<%block name="title">
-  <title>IONIS Online Courses | Nous contacter</title>
-</%block>
+<%block name="pagetitle">Contact</%block>
 
 <section class="static-container contact">
   <h1>Nous contacter</h1>
