--- a/templates/static_templates/theme-honor.html
+++ b/templates/static_templates/theme-honor.html
@@ -3,9 +3,7 @@
 
 <%namespace name='static' file='/static_content.html'/>
 
-<%block name="title">
-  <title>IONIS Online Courses | Charte utilisateurs</title>
-</%block>
+<%block name="pagetitle">Charte utilisateurs</%block>
 
 <section class="static-container honor-code">
   <h1>Charte utilisateurs</h1>
