--- a/templates/static_templates/theme-tos.html
+++ b/templates/static_templates/theme-tos.html
@@ -3,9 +3,7 @@
 
 <%namespace name='static' file='/static_content.html'/>
 
-<%block name="title">
-  <title>IONIS Online Courses | Conditions générales d’utilisation</title>
-</%block>
+<%block name="pagetitle">Conditions générales d’utilisation</%block>
 
 <section class="static-container tos">
   <h1>Conditions Générales d’Utilisation</h1>
