--- a/templates/registration/password_reset_confirm.html
+++ b/templates/registration/password_reset_confirm.html
@@ -4,10 +4,7 @@
 <%namespace name='static' file='/static_content.html'/>
 <%! from django.utils.translation import ugettext as _ %>
 
-<%block name="title">
-<title>IONIS Online Courses | Réinitialiser votre mot de passe</title>
-</%block>
-
+<%block name="pagetitle">Réinitialiser votre mot de passe</%block>
 <%block name="bodyclass">view-passwordreset</%block>
 
 <%block name="js_extra">
